[package]
name = "mattermost-driver"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
#base64 = "0.10"
#chrono = { version = "<= 1.0", features = ['serde'] }
dotenv = "0.9"
futures = "0.1"
hyper = "<= 1.0"
hyper-rustls = "<= 1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "<= 1.0"
url = "1.7"
url_serde = "<= 1.0"
