[package]
name = "mattermost-driver"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
#base64 = "0.10"
#chrono = { version = "<= 1.0", features = ['serde'] }
dotenv = "0.9"
futures = "0.1"
hyper = "0.12.35"
hyper-rustls = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1.22"
url = "1.7"
url_serde = "0.2.0"
